--- a/changelog/breaking-changes-and-migrations/migration-guides.mdx
+++ b/changelog/breaking-changes-and-migrations/migration-guides.mdx
@@ -1,148 +1,174 @@
 ---
-title: "Migration Guides"
-description: "Step-by-step instructions to help users transition from previous versions to the latest GoogleTest and GoogleMock releases. Includes best practices, common pitfalls, and links to detailed upgrade examples."
+title: "Upgrade & Migration Guides"
+description: "Step-by-step upgrade guidance for significant releases, mapping old usage patterns to new best practices and detailing how to resolve common migration issues. Links code examples, configuration changes, and real-world scenarios to reduce upgrade effort and risk."
 ---
 
-# Migration Guides
+# Upgrade & Migration Guides
 
-This page provides clear, practical guidance to help users transition from earlier versions to the latest releases of GoogleTest and GoogleMock. Moving to newer versions can unlock improved features, stronger C++ standard support, and refined mocking capabilities but may also require adjustments to existing tests and mocking strategies. Here we walk you through the key considerations, common pitfalls, and best practices for a smooth migration.
+GoogleTest and GoogleMock continuously evolve to improve usability, compatibility, and performance. This page provides detailed, step-by-step upgrade guidance for significant releases, helping you adapt your existing test code and mocks smoothly. It maps older usage patterns to new best practices and offers solutions to common migration challenges.
 
----
+## Why Use Upgrade & Migration Guides?
+Upgrading a testing framework can be daunting, especially in large C++ codebases where mocking and testing conventions are deeply entrenched. This guide empowers you to:
 
-## 1. Preparing for Migration
+- Understand behavioral and API changes impacting your tests
+- Learn how to map deprecated features to supported alternatives
+- Resolve common issues encountered during migration
+- Minimize test breakage and maintenance overhead
 
-### Understand the New Requirements
+By following these instructions, your upgrade will be efficient and low-risk.
 
-- **C++17 Minimum Standard:** The latest GoogleTest and GoogleMock versions require your codebase to be compiled with at least C++17. Ensure your build configuration specifies this standard to avoid compatibility issues.
+## General Approach to Upgrading
 
-- **Compiler Updates:** Use a compiler that supports C++17 fully, such as:
-  - GCC 7 or later
-  - Clang 7 or later
-  - MSVC 2017 or later
+### Step 1: Review Release Notes and Breaking Changes
+Start by reviewing the release notes of the versions you plan to upgrade through. Pay special attention to any listed breaking changes, deprecated functionality, or new recommended practices for mocks and test structure.
 
-Check your compiler documentation if unsure.
+### Step 2: Identify Deprecated or Changed APIs in Your Codebase
+Use static analysis or manual review to find uses of APIs or macros that have changed, such as legacy mocking macros or outdated call expectations.
 
-### Audit Your Existing Tests and Mocks
+### Step 3: Update Mock Classes and Expectations
+Refactor your mock classes to leverage the modern `MOCK_METHOD` macro instead of older variants. Replace deprecated features with supported alternatives as specified below.
 
-- Take inventory of mock classes, especially those relying on old mocking macros or deprecated interfaces.
-- Identify any mocks using the legacy `MOCK_METHODn` macros, non-virtual method mocks, or complex actions that may require updates.
+### Step 4: Adjust Behavior Verification and Ordering Clauses
+When upgrading, ensure your expectations respect any changed default behaviors around invocation ordering, cardinalities, and strictness semantics.
 
-### Backup and Version Control
+### Step 5: Test Thoroughly and Enable Verbose Mock Logging
+Run your test suite with `--gmock_verbose=info` to observe mock calls and verify expectations. Use this to debug mismatches or surprising behavior.
 
-Before starting, ensure your test code is committed and backed up. Migration may require iterative fixes and testing.
+### Step 6: Consult the Cookbook and Cheat Sheet
+Leverage the [gMock Cookbook](gmock_cook_book.md) and [Mocking Cheat Sheet](gmock_cheat_sheet.md) for recipes on rewritten or enhanced patterns.
 
----
+## Mapping Old Usage to New Best Practices
 
-## 2. Key Migration Steps
-
-### Replace Legacy Mocking Macros
-
-The recommended mocking macro is now `MOCK_METHOD`, which supports advanced qualifiers and cleaner syntax. Replace any instances of legacy `MOCK_METHODn` or `MOCK_CONST_METHODn` macros with the new generic `MOCK_METHOD` format.
-
-**Example:**
-
-Old syntax:
+| Legacy Usage or Problem                | Recommended Modern Solution                                       |
+|-------------------------------------|------------------------------------------------------------------|
+| Using `MOCK_METHODn` macros          | Replace with `MOCK_METHOD` macro with full signature and optional qualifiers. Example:
 ```cpp
+// Old:
 MOCK_METHOD1(Foo, bool(int));
+// New:
+MOCK_METHOD(bool, Foo, (int), (override));
 ```
-New syntax:
+|
+| Mocking non-virtual methods          | Use the Hi-perf dependency injection technique described in the [MockingNonVirtualMethods](gmock_cook_book.md#MockingNonVirtualMethods) section.
+|
+| Expectation sticky behavior unexpected| Explicitly call `.RetiresOnSaturation()` to prevent stale expectations from matching future calls.
+|
+| Expectation ordering confusion       | Use `InSequence` blocks or `Sequence` objects with `.InSequence()` clauses for deterministic call order.
+|
+| Default actions not matching mocks    | Use `ON_CALL()` to define default behavior; reserve `EXPECT_CALL()` for behavioral verification.
+|
+| Uninteresting calls generate warnings | Use `NiceMock<T>` to suppress warnings or explicitly define catch-all `EXPECT_CALL(...).Times(AnyNumber())`.
+|
+| Mock method with multiple actions    | Chain `.WillOnce(...)` calls followed by `.WillRepeatedly(...)` for sequential behaviors.
+|
+| Using deprecated `MOCK_CONST_METHODn` macros | Refactor to `MOCK_METHOD` with `(const, override)` qualifiers.
+|
+
+## Resolving Common Migration Issues
+
+### Problem: Compiler warnings about const parameters on mock methods
+**Cause:** Microsoft Visual C++ produces warning C4301 or C4373 due to `const` modifier in parameter declarations.
+
+**Solution:**
+Replace parameters declared as `const int i` with just `int i` in both interface and mock class declarations. The top-level `const` has no semantic difference but resolves the compiler issue.
+
+### Problem: Mock method calls trigger unexpected warnings about uninteresting calls
+
+**Cause:** Calls to mock methods without matching `EXPECT_CALL` can generate warnings, though they are permitted.
+
+**Solution:**
+- Use `NiceMock` wrapper for mocks to suppress warnings.
+- Add explicit permissive expectations with `EXPECT_CALL(mock, Method(_)).Times(AnyNumber());`
+
+### Problem: Tests report duplicated unsatisfied expectation errors
+
+**Cause:** Multiple unsatisfied expectations at different points in execution may produce repetitive output.
+
+**Solution:** This is expected behavior; use the verbose logging feature to pinpoint which expectations failed and when.
+
+### Problem: Incompatibilities with legacy `MOCK_METHODn` macros and new gMock versions
+
+**Cause:** Newer versions encourage use of `MOCK_METHOD` for improved flexibility, different syntax, and qualifiers.
+
+**Solution:** Rapidly migrate all mocks to the new macro:
+
 ```cpp
-MOCK_METHOD(bool, Foo, (int));
+// Before
+MOCK_CONST_METHOD1(Foo, bool(int));
+// After
+MOCK_METHOD(bool, Foo, (int), (const, override));
 ```
 
-### Review and Update Mock Method Qualifiers
+### Problem: Mocked methods with move-only parameters or return types cause compilation failures
 
-Ensure your mock methods specify qualifiers such as `(const)`, `(override)`, `(noexcept)`, or call type as needed on the new macro.
+**Cause:** Early gMock did not support move-only semantics fully.
 
-### Manage Non-Virtual and Free Function Mocks
+**Solution:**
+- Upgrade to gMock versions after April 2017 for native support.
+- For legacy code, use delegation to non-move mocks as an intermediate solution.
 
-Update your design if you mock non-virtual methods or free functions:
-- Use interface abstractions where possible.
-- For non-virtual methods, prefer template-based dependency injection.
-- For free functions, wrap them behind interfaces or use `MockFunction` for `std::function` objects.
+### Problem: Confusing behavior from multiple `EXPECT_CALL` with overlapping matchers
 
-### Handle Changes in Default Mock Behavior
+**Cause:** gMock matching order is back-to-front (newer expectations override older)
 
-By default, uninteresting calls to mocks now print warnings. Decide on using `NiceMock`, `NaggyMock`, or `StrictMock` wrappers to control warnings and failure behavior based on your test strategy.
+**Solution:** Order your expectations from most general first to most specific last. Use sequences or combined matchers to organize expectations clearly.
 
-### Adopt C++17 Features and Fix Compiler Warnings
+## Practical Tips and Best Practices
 
-Your test code can now use C++17 idioms. Review and remove workarounds for older standards, including redundant casts or macros.
+- Always place `EXPECT_CALL` *before* calling the mock to avoid undefined behavior.
+- When mocking overloaded methods, specify argument types or use `using Base::Method;` to bring overloads into scope.
+- Use `ON_CALL` to specify default behaviors shared by multiple tests.
+- Use `RetiresOnSaturation()` to retire expectations after they are fulfilled, particularly in loops.
+- For legacy mockers, update to the modern macro to improve compiler support and clarity.
+- Leverage verbose mocking flags and stack traces for troubleshooting during migration.
 
----
+## Frequently Referenced Resources
 
-## 3. Best Practices During Migration
+- [gMock for Dummies](gmock_for_dummies.md): Beginner-friendly introduction to mocks, expectations, and usages.
+- [gMock Cookbook](gmock_cook_book.md): Recipes for advanced mocking patterns, delegation, custom matchers, and actions.
+- [Mocking Cheat Sheet](gmock_cheat_sheet.md): Quick overview of matchers, actions, and cardinalities.
+- [Legacy gMock FAQ](docs/gmock_faq.md): Answers to common legacy compatibility questions.
 
-### Use `ON_CALL` vs `EXPECT_CALL`
+## Troubleshooting Migration
 
-Favor `ON_CALL` to set default mock behavior without imposing strict call expectations. Use `EXPECT_CALL` only when you want to assert a method call happens with specific arguments and count. This minimizes brittle tests.
+If tests fail after migration:
 
-### Check for Overloaded Mock Methods
+- Run tests with `--gmock_verbose=info` to trace mock calls.
+- Confirm your mock class methods have the correct override qualifiers.
+- Check for hidden overloads or missing `using` declarations causing ambiguous calls.
+- Verify ordering of `EXPECT_CALL` and actual mock method calls aligns with requirements.
+- Make sure to handle new ownership/model semantics for move-only types.
 
-For overloaded methods, ensure all variants are mocked with unique signatures. Use `using` declarations to prevent hiding overloaded methods unintentionally.
+## Summary Diagram of the Upgrade Flow
 
-### Verify and Update Custom Actions and Matchers
+```mermaid
+flowchart TD
+  Start([Start Upgrade]) --> Review[Review Release Notes & Breaking Changes]
+  Review --> Identify[Identify Deprecated APIs]
+  Identify --> RefactorMocks[Refactor Mock Classes & Methods]
+  RefactorMocks --> AdjustExpectations[Adjust Expectations & Actions]
+  AdjustExpectations --> TestRun[Test Run & Debug]
+  TestRun -->|Pass| Done([Upgrade Successful])
+  TestRun -->|Fail| Debug[Debug & Fix Issues]
+  Debug --> TestRun
+```
 
-Update your custom matchers and actions to conform to new interfaces if necessary. Leverage polymorphic matchers and actions to simplify reusable test utilities.
+## Additional Support
 
-### Delegate to Real or Fake Objects Where Appropriate
+For further assistance and community tips, explore:
 
-Consider the delegation patterns (`DelegateToFake()`, real object delegation) to reduce duplication and maintain consistent behavior.
+- [GoogleTest User's Guide](docs/index.md)
+- [FAQ: Getting Started & Troubleshooting](faq/getting-started-faq/first-steps-troubleshooting.mdx)
+- [Community-Created Documentation](docs/community_created_documentation.md)
 
----
+For source code, issue tracking, and updates, visit the GitHub repository:
 
-## 4. Common Pitfalls and Troubleshooting
+- [googletest on GitHub](https://github.com/google/googletest)
 
-- **Compilation Errors:** Usually stem from missing C++17 flags or legacy macros still present.
-- **Linker Issues:** Arise if linking against an older GoogleTest static library after source upgrade.
-- **Unhandled Overloads:** Partial mocking of overloaded methods causes warnings or hidden methods.
-- **Unexpected Mock Warnings:** Transition to `NiceMock` or explicitly handle uninteresting calls to suppress noisy output.
+## Call to Action
 
-If you encounter such issues, revisit the preparation steps and ensure all code changes have been applied consistently.
-
----
-
-## 5. Additional Resources & Examples
-
-- [Detailed Release Notes](https://github.com/google/googletest/releases) — Review release-by-release changes for additional context.
-- [Mocking Cookbook](../gmock_cook_book.md) — Recipes to handle advanced mocking scenarios.
-- [Breaking Changes and Migrations](../breaking-changes-and-migrations/breaking-changes.md) — In-depth information on user-impacting changes.
-- [GoogleTest Primer](../primer.md) — Refresh your foundation after migration.
-
----
-
-## 6. Step-by-Step Upgrade Example
-
-Here’s an example flow to upgrade your mock classes:
-
-<Steps>
-<Step title="Check Compiler and Build Configuration">
-Ensure your build system uses C++17; verify compiler version.
-</Step>
-<Step title="Replace All Legacy `MOCK_METHODn` Macros">
-Convert all legacy mock macros to the new `MOCK_METHOD` syntax carefully.
-</Step>
-<Step title="Add Necessary Qualifiers to Mock Methods">
-Add `(const)`, `(override)` as required for correctness and readability.
-</Step>
-<Step title="Build and Fix Compilation Issues">
-Fix errors from missing includes, incorrect types, or method signatures.
-</Step>
-<Step title="Suppress Uninteresting Call Warnings Based on Strategy">
-Wrap mocks with `NiceMock` or `StrictMock` or add explicit expectations.
-</Step>
-<Step title="Run Tests and Verify Behavior">
-Run your test suite; fix any failing tests due to changed mock behavior.
-</Step>
-</Steps>
+Consult this guide when planning significant upgrades to GoogleTest and GoogleMock. Follow the outlined steps to ensure smooth migration. Leverage the linked references and community guides to stay current with best practices and new capabilities.
 
 ---
 
-For a practical migration, start small with a single test suite or set of mock classes and iteratively broaden the migration once the initial steps succeed.
-
-
----
-
-<Check>
-Always validate your upgraded tests through continuous integration to catch any subtle regressions early.
-</Check>
+*End of Upgrade & Migration Guides*
