--- a/overview/introduction-core-value/what-is-googletest.mdx
+++ b/overview/introduction-core-value/what-is-googletest.mdx
@@ -1,51 +1,123 @@
 ---
-title: "What is GoogleTest?"
-description: "An introduction to GoogleTest: its origins, mission, and why it is a cornerstone for reliable C++ development. This page quickly aligns user expectations and provides a clear elevator pitch for the uninitiated."
+title: "What is GoogleTest & GoogleMock?"
+description: "Discover the fundamentals of GoogleTest and GoogleMock: a unified framework for C++ unit testing and mocking. Learn how these tools help teams build reliable, maintainable code by automating test discovery, providing rich assertions, and supporting advanced test scenarios. Understand the types of problems solved and why GoogleTest is widely adopted across the industry."
 ---
 
-# What is GoogleTest?
+# What is GoogleTest & GoogleMock?
 
-## Introduction: The Foundation of Reliable C++ Testing
+## Hero Section & Value Proposition
 
-GoogleTest is Google's pioneering C++ testing framework, specifically designed to empower developers with reliable, maintainable, and cross-platform tests. It originated within Google’s Testing Technology team to address the practical challenges of testing complex C++ codebases across diverse environments—be it Linux, Windows, or macOS.
+### Elevate Your C++ Testing with GoogleTest & GoogleMock
 
-At its core, GoogleTest helps you write better tests that are independent, organized, fast, and informative—qualities essential for delivering robust software. With a design inspired by the popular xUnit architecture, it seamlessly fits into your development workflow, guiding you from simple validations to sophisticated testing strategies.
+GoogleTest and GoogleMock provide a comprehensive, unified framework for C++ developers striving to write reliable, maintainable, and efficient tests for their codebases. These tools streamline test discovery, enhance test expresiveness with rich assertions and mocking capabilities, and support advanced testing scenarios required by complex software projects.
 
-## Why GoogleTest Matters
+### Key Benefits
+- **Automated Test Discovery:** Define tests without manual registration, enabling seamless test execution with `RUN_ALL_TESTS()`.
+- **Rich Assertion Library:** Comprehensive macros for verifying conditions, including equality, exceptions, predicates, and death tests.
+- **Mocking Support:** GoogleMock extends GoogleTest with powerful mock object creation, allowing precise control over dependencies and behaviors.
+- **Advanced Test Patterns:** Support for parameterized, typed, and death tests empowers thorough coverage and robust error-handling verification.
+- **Cross-Platform Compatibility:** Works consistently across Linux, Windows, macOS, and embedded environments.
 
-In modern development, ensuring code correctness is paramount. GoogleTest tackles common pain points that developers face when writing and maintaining tests:
-
-- **Test Isolation**: Each test runs independently on separate objects, eliminating hidden dependencies and flaky results.
-- **Organized Suites**: Group your logically related tests into **test suites**, mirroring the structure of your code, making tests easier to understand and maintain.
-- **Platform Neutrality**: Write once, test everywhere. GoogleTest operates consistently across various operating systems and compilers.
-- **Rich Failures Insight**: When a test fails, GoogleTest furnishes detailed diagnostic output without halting the entire test run, helping you fix multiple issues rapidly.
-- **Automatic Test Management**: No manual registration needed. GoogleTest automatically tracks and runs all defined tests.
-- **Performance Efficiency**: Reuse shared resources smartly to speed up setup and teardown, keeping your tests fast without sacrificing quality.
-
-These principles make GoogleTest not just a tool, but a robust foundation for high-quality C++ software development.
-
-## Elevator Pitch: What GoogleTest Enables You To Do
-
-Imagine you’ve just written a complex component in C++. You want fast, reliable feedback on code correctness every time you change something. GoogleTest provides:
-
-- A **simple macro-based API** (`TEST()`, `TEST_F()`) to quickly define and organize your tests.
-- The ability to **group tests into suites** that reflect your code’s modules or classes.
-- Facilities for **reusing common test setup** through fixtures.
-- Detailed and readable output that pinpoints exactly what failed and why.
-
-In essence, GoogleTest turns writing tests from a chore into an integral, efficient part of your development process.
-
-## Who Should Read This Page?
-
-This introduction is crafted for C++ developers of all levels who want a clear understanding of what GoogleTest is, why it matters, and how it fits into the broader software testing landscape. Whether you are exploring testing frameworks for the first time or evaluating the best option for your project, this overview sets the stage for your journey with GoogleTest.
-
-## Related Pages and Next Steps
-
-- To get hands-on immediately, see the [GoogleTest Primer](/guides/getting-started/primer) for a quick tutorial.
-- For an in-depth look at core API usage, explore [Test Case Construction](/api-reference/gtest-core-apis/test-case-construction).
-- Discover how GoogleTest integrates with mocking for behavioral testing in [Mocking Reference](/docs/reference/mocking.md).
-- Learn about advanced test organization using parameterized and typed tests in [Parameterized and Typed Tests](/api-reference/gtest-core-apis/parameterized-tests).
-
-Start your test-driven development journey today with GoogleTest — the framework built to keep your code reliable and your debugging swift.
+### Who Should Use This?
+- C++ developers seeking an industry-standard framework to build and maintain test suites.
+- Teams aiming for high code quality through automated and scalable testing.
+- Projects requiring mocking to isolate components and simulate dependencies.
 
 ---
+
+## Overview
+
+### What Are GoogleTest and GoogleMock?
+
+GoogleTest is a feature-rich C++ testing framework designed to help developers write better tests efficiently. GoogleMock, built on top of GoogleTest, adds mocking capabilities, enabling tests that require simulating the behavior of complex or external dependencies.
+
+### Why Use GoogleTest?
+
+Writing tests manually can be error-prone, verbose, and uninspiring. GoogleTest simplifies this by providing macros for defining tests and assertions, isolating tests, tracking failures with detailed messages, and facilitating consistent test organization via test suites and fixtures.
+
+### Why GoogleMock?
+
+In many projects, isolating code under test from external components or hard-to-control dependencies is crucial. GoogleMock offers an expressive and flexible mocking framework that integrates tightly with GoogleTest, allowing easy creation of mock classes, specifying expectations, and verifying interactions.
+
+### What Problems Does It Solve?
+
+- **Automating Test Execution:** Forget manual test lists; GoogleTest discovers and runs tests automatically.
+- **Simplifying Assertion Logic:** Detailed messages and rich assertions give developers quick insights into failures.
+- **Testing with Parameters and Types:** Parameterized and typed tests reduce duplication and enhance coverage.
+- **Simulating Dependencies:** GoogleMock mocks external or complex dependencies to facilitate unit testing.
+- **Ensuring Crash and Exit Validation:** Death tests ensure critical failure behavior is correctly handled.
+
+### Core Components
+
+- **Test Definitions:** Using `TEST()`, `TEST_F()`, `TEST_P()`, and typed test macros to organize and write tests.
+- **Assertions:** Macros such as `EXPECT_EQ`, `ASSERT_TRUE`, `EXPECT_THROW`, and many others validate code behavior.
+- **Test Fixtures:** Reusable setup and teardown for tests sharing common context.
+- **Mock Objects:** Classes generated or written to simulate dependencies with expectation control.
+- **Test Runner:** The `RUN_ALL_TESTS()` function orchestrates test execution.
+
+### Simple Example
+
+```cpp
+#include <gtest/gtest.h>
+
+// Simple test case
+TEST(MathTest, Addition) {
+  EXPECT_EQ(2 + 2, 4); // Passes
+  EXPECT_NE(2 + 2, 5); // Passes
+}
+
+// Test fixture example
+class QueueTest : public testing::Test {
+ protected:
+  void SetUp() override { queue_.clear(); }
+  std::queue<int> queue_;
+};
+
+TEST_F(QueueTest, IsEmptyInitially) {
+  EXPECT_TRUE(queue_.empty());
+}
+
+int main(int argc, char** argv) {
+  testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
+}
+```
+
+This example showcases defining tests quickly and running all tests with detailed output and failure reporting.
+
+---
+
+## Why Should You Care?
+
+GoogleTest and GoogleMock empower C++ developers to ensure their code works as intended, catching regressions early and easing debugging efforts. By embracing these tools, teams can:
+
+- Achieve **higher code quality** through comprehensive, automated tests.
+- Save **development time** by reducing boilerplate and simplifying test authoring.
+- Enhance **maintainability** by grouping related tests and reusing setup code.
+- Simulate complex scenarios easily, isolating the unit under test with mocks.
+- Reliably test failure modes, including crashes and exceptions.
+
+Without such frameworks, tests become brittle, verbose, and less insightful, increasing the risk of bugs slipping into production.
+
+---
+
+## Next Steps
+
+Check out these key documentation pages to deepen your understanding:
+
+- [GoogleTest Primer](primer.md): Learn basic test-writing and execution.
+- [Advanced GoogleTest Topics](advanced.md): Explore parameterized tests, death tests, and other advanced features.
+- [Test Macros & Assertions Reference](reference/assertions.md): Discover the full range of assertions.
+- [Product Value & Primary Use Cases](/overview/introduction-core-value/value-proposition-use-cases): Understand where GoogleTest excels.
+
+Experiment with writing simple test cases and familiarizing yourself with test fixtures to build confidence.
+
+---
+
+## Additional Resources
+
+- Official GitHub Repository: [https://github.com/google/googletest](https://github.com/google/googletest)
+- Samples Directory: Rich examples to accelerate learning (see [docs/samples.md])
+- Community and Support: Join mailing lists, forums, or issue trackers to get help and share knowledge.
+
+Embrace GoogleTest and GoogleMock to elevate your C++ testing practice — reliable tests mean reliable software.
